--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 | **Bleu gris pastel** | `#CEDDEB` | **Titres, liens ou icônes secondaires** — frais et équilibrant face aux tons chauds.                       |
 | **Brun chat doux**   | `#A8937C` | **Texte principal** ou **logo**, **bordures** — lisible, doux, parfait pour garder une ambiance café cosy. |
 
+coucou
 
 Titres principaux : Baloo 2
 Sous-titres et menus : Poppins Semi-Bold
@@ -43,16 +44,16 @@ Fredoka*/
 }
 
 h1 {
-    font-size: 1.5rem;
+    font-size: 2rem;
 }
 
 h2 {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     text-decoration: underline;
 }
 
 h3 {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
 }
 
 /* STYLE */
@@ -119,7 +120,11 @@ nav a {
 }
 
 nav a:hover {
-    color: #f1bebe;
+    color: #e4b2b2;
+    background-color: rgba(255, 255, 255, 0.869);
+    border-radius: 15px;
+    transition: 0.2s;
+    padding: 0.5rem;
 }
 
 main {
@@ -157,7 +162,7 @@ footer a {
 }
 
 footer a:hover {
-    color: #f1bebe;
+    color: #e4b2b2;
 }
 
 footer img {
@@ -208,8 +213,8 @@ footer img {
     border-radius: 0 0 2% 2%;
 }
 
-.h2_center {
-    font-size: 1.3rem;
+.h1_center {
+    font-size: 1.5rem;
     text-decoration: underline;
     font-weight: bold;
     text-align: center;
@@ -219,6 +224,20 @@ footer img {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.container-bouton {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 3rem;
+}
+
+.nav_active {
+    background-color: rgba(255, 255, 255, 0.869);
+    border-radius: 12px;
+    text-decoration: none;
+    padding: 0.5rem;
+    color: #e4b2b2;
 }
 
 /* SECTIONS */
@@ -297,10 +316,9 @@ textarea {
     font-family: "Quicksand", sans-serif;
     font-size: 1rem;
     width: 95%;
-    padding: 1%;
-    border-style: solid 1px #cfcfcf;
-    border-radius: 5px;
-    border-color: none;
+    padding: 3%;
+    border:none;
+    border-radius: 12px;
 }
 
 input[type="checkbox"] {
