--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,7 @@ footer img {
     height: 50px;
 }
 
-iframe {
+iframe{
     border-radius: 12px;
 }
 
@@ -187,7 +187,7 @@ iframe {
     grid-template-rows: repeat(1, 1fr);
 }
 
-.cat_card a {
+.cats_card a {
     text-decoration: none;
 }
 
@@ -341,7 +341,7 @@ input[type="checkbox"] {
 
 @media only screen and (max-width: 430px) {
     body {
-        grid-template-rows: 180px 0px 1fr 1fr 1fr 180px;
+        grid-template-rows: 180px 325px 1fr 1fr 1fr 180px;
         grid-template-areas:
             "header header header header header header"
             "nav nav nav nav nav nav"
@@ -367,7 +367,13 @@ input[type="checkbox"] {
     }
 
     nav {
-        display: none;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    nav a {
+        margin: 4%;
     }
 
     footer {
@@ -437,9 +443,4 @@ input[type="checkbox"] {
     form {
         width: 75%;
     }
-
-
-    /* MENU BURGER */
-
-    
 }
