--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ nav a:hover {
 main {
     grid-area: main;
     font-family: "Quicksand", sans-serif;
-    padding: 4%;
+    padding: 3%;
     text-align: justify;
     text-justify: inter-word;
     border-radius: 10px;
@@ -241,7 +241,7 @@ iframe{
 }
 
 .nav_active {
-    background-color: rgba(255, 255, 255, 0.869);
+    background-color: rgba(255, 255, 255, 0.918);
     border-radius: 12px;
     text-decoration: none;
     padding: 0.5rem;
@@ -261,44 +261,14 @@ iframe{
     ;
 }
 
-.hot {
+.hot, .cold, .sweet, .salty {
     display: flex;
     flex-direction: column;
     align-items: center;
     border-radius: 2%;
     border-style: solid;
     border-color: white;
-    border-width: 1px;
-}
-
-.cold {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 2%;
-    border-style: solid;
-    border-color: white;
-    border-width: 1px;
-}
-
-.sweet {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 2%;
-    border-style: solid;
-    border-color: white;
-    border-width: 1px;
-}
-
-.salty {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 2%;
-    border-style: solid;
-    border-color: white;
-    border-width: 1px;
+    border-width: 2px;
 }
 
 form {
@@ -339,7 +309,7 @@ input[type="checkbox"] {
 
 /* RESPONSIVE */
 
-@media only screen and (max-width: 430px) {
+@media only screen and (max-width: 640px) {
     body {
         grid-template-rows: 180px 325px 1fr 1fr 1fr 180px;
         grid-template-areas:
