--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ body {
     font-size: 1.05rem;
     display: grid;
     gap: 0.25rem 0.25rem;
-    grid-template-columns: 250px 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 275px 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 240px 1fr 1fr 1fr 1fr 180px;
     grid-template-areas:
         "nav header header header header header"
@@ -115,6 +115,7 @@ nav a {
     font-weight: 500;
     text-decoration: none;
     margin: 5%;
+    transition: 0.25s;
 }
 
 nav a:hover {
@@ -123,6 +124,9 @@ nav a:hover {
     border-radius: 15px;
     transition: 0.2s;
     padding: 0.5rem;
+    transition: 0.25s;
+    font-weight: bold;
+    font-size: 1.3rem;
 }
 
 main {
@@ -157,10 +161,12 @@ footer {
 footer a {
     text-decoration: none;
     color: #a798ff;
+    transition: 0.25s;
 }
 
 footer a:hover {
     color: #e4b2b2;
+    transition: 0.25s;
 }
 
 iframe {
@@ -248,6 +254,8 @@ iframe {
     text-decoration: none;
     padding: 0.5rem;
     color: #e4b2b2;
+    font-weight: bold;
+    font-size: 1.3rem;
 }
 
 .scroll-up {
